html+css typo tera

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">TERA</a>
+                <a class="navbar-brand page-scroll" href="#page-top" id="ateraimg"><img src="img/TeraTypo.png" id="typotera" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
