--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
+                        <a class="page-scroll" href="#intro"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#projet">Projet</a>
